[gd_scene load_steps=4 format=1]

[ext_resource path="res://Elementoj/Luno.gd" type="Script" id=1]
[ext_resource path="res://Elementoj/luno.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 67.0075

[node name="Luno" type="Node2D"]

script/script = ExtResource( 1 )

[node name="Aspekto" type="Sprite" parent="."]

texture = ExtResource( 2 )

[node name="Areo" type="Area2D" parent="."]

input/pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, -7, -1 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision/layers = 1024
collision/mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Areo"]

transform/pos = Vector2( -7, -1 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="Kasxi" type="Tween" parent="."]

playback/process_mode = 1
playback/active = false
playback/repeat = false
playback/speed = 1.0

[node name="Rotacii" type="Tween" parent="."]

playback/process_mode = 1
playback/active = false
playback/repeat = true
playback/speed = 1.0

[connection signal="body_enter" from="Areo" to="." method="_on_Areo_body_enter"]

[connection signal="tween_complete" from="Kasxi" to="." method="_on_Kasxi_tween_complete"]

[connection signal="tween_step" from="Rotacii" to="." method="_on_Rotacii_tween_step"]


